[package]
name = "noxy_expose"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
base64 = "0.21"
bytes = "1"
